[project]
name = "selenium-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Jefferson Barreto",email = "jeffersonlp@gmail.com"}
]
license = {text = "MIT license"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "selenium (>=4.33.0,<5.0.0)",
    "alumnium (>=0.10.0,<0.11.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
